--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,23 +1,56 @@
+.contact {
+    position: absolute;
+    top: 4146px;
+    right: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    border: 1px solid yellow;
+}
+
+.contact-content {
+    width: 100%;
+    max-width: 1440px;
+    height: 100%;
+    border: 1px solid red;
+    display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
+}
+
 .border {
     position: relative;
     top: 56px;
-    margin-right: 10px;
     width: 50px;
     border-top: 4px solid var(--purple);
 }
 
 h2 {
-    margin-left: 100px;
+    margin-bottom: 122px;
 }
 
 .contact-div {
     width: 100%;
+    margin-left: 100px;
+    // display: flex;
+    // justify-content: center;
+}
+
+.contact-undersection {
     display: flex;
-    justify-content: center;
+    align-items: flex-start;
 }
 
 .text-div {
-    min-width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 473px;
+    gap: 35px;
+}
+
+.input-div {
+    width: -webkit-fill-available;
 }
 
 form {
@@ -88,7 +121,7 @@ input[type="submit"] {
 .go-up-btn {
     width: 39px;
     height: 39px;
-    position: absolute;
+    position: relative;
     right: 16px;
     transition: 200ms ease-in-out;
 }
