--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -12,7 +12,8 @@
                 <div class="title-header">
                     <div class="title-div">
                         <h2>My skills</h2>
-                        <p>I have grown my frontend developments skills that have allowed me to create different real
+                        <p>I have grown my frontend developments skills that have allowed me to create different
+                            real
                             projects.</p>
                     </div>
                     <div class="button-div">
