--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -43,10 +43,13 @@
 
 .profile-img {
     position: relative;
-    top: 140px;
+    // top: 140px;
+    top: 200px;
     left: 47px;
-    width: 646px;
-    height: 705px;
+    // width: 646px;
+    width: auto;
+    height: 620px;
+    // height: 705px;
     z-index: -2;
 }
 
@@ -147,7 +150,8 @@
 
 .contact-div {
     position: relative;
-    top: 144px;
+    // top: 144px;
+    top: 220px;
     // position: relative;
     // left: 0;
     // bottom: 210px;
@@ -163,7 +167,8 @@
 
 .scroll-div {
     position: relative;
-    top: 70px;
+    // top: 70px;
+    top: 146px;
     // position: relative;
     // right: 0;
     // bottom: 255px;
