--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -14,31 +14,48 @@
     height: 100%;
     border: 1px solid red;
     display: flex;
+    gap: 10px;
     // flex-direction: column;
     // justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
 }
 
 .border {
     position: relative;
     top: 56px;
+    right: 693px;
     width: 50px;
     border-top: 4px solid var(--purple);
 }
 
 h2 {
-    margin-bottom: 122px;
+    margin-bottom: 70px;
+    margin-left: 100px;
+}
+
+h3 {
+    font-size: 38px;
+    line-height: 38.4px;
+    font-weight: 700;
+}
+
+p {
+    font-size: 16px;
+    line-height: 19.2px;
+    font-weight: 400;
 }
 
 .contact-div {
     width: 100%;
-    margin-left: 100px;
-    // display: flex;
-    // justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .contact-undersection {
     display: flex;
     align-items: flex-start;
+    margin-left: 100px;
 }
 
 .text-div {
@@ -50,6 +67,7 @@ h2 {
 }
 
 .input-div {
+    position: relative;
     width: -webkit-fill-available;
 }
 
@@ -58,10 +76,11 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 32px;
 
     input[type="text"], 
     textarea {
+        font-family: 'Poppins';
         font-size: 16px;
         line-height: 19.2px;
         background-color: var(--dark-blue);
@@ -105,23 +124,39 @@ input[type="submit"] {
 
 .checkbox-div {
     display: flex;
-    justify-content: center;
     align-items: center;
-    width: 100%;
-    gap: 12px;
+    width: 617px;
+    gap: 8px;
 
-    input {
-        width: 18px;
-        height: 18px;
-        // background-color: var(--dark-blue);
-        // border-color: var(--light-blue);
+    img {
+        height: 24px;
+        width: 24px;
+        cursor: pointer;
     }
+
+    p {
+        display: contents;
+        font-size: 14px;
+        line-height: 16.8px;
+        
+        a {
+            color: var(--purple);
+            font-size: 14px;
+            line-height: 16.8px;
+        }
+    }
+}
+
+.go-up {
+    margin-top: 100px;
 }
 
 .go-up-btn {
     width: 39px;
     height: 39px;
     position: relative;
-    right: 16px;
+    bottom: 28px;
+    left: 668px;
     transition: 200ms ease-in-out;
+    margin-top: 100px;
 }
