--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -75,6 +75,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 35px;
 
     h2 {
         display: flex;
@@ -94,6 +95,7 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
+    gap: 34px;
 }
 
 .button-div {
@@ -114,8 +116,6 @@
     color: white;
     cursor: pointer;
     transition: 125ms ease-out;
-    position: relative;
-    top: 44px;
 
     &:hover {
         padding: 20px 40px;
