--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
 <app-my-skills></app-my-skills>
 <app-portfolio></app-portfolio>
 <app-contact></app-contact>
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
 <router-outlet></router-outlet>
