--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,19 +1,24 @@
 section {
+    position: absolute;
+    top: 5042px;
+    right: 0;
+    left: 0;
     width: 100%;
     display: flex;
     justify-content: center;
-    border-top: 4px solid var(--light-blue);
+    // border-top: 4px solid var(--light-blue);
+    border: 1px solid yellow;
 }
 
 footer {
-    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 37px 100px;
     width: 100%;
-    height: 291px;
     max-width: 1440px;
+    border: 1px solid red;
+    height: 291px;
 
     a {
         margin-left: 4px;
@@ -21,11 +26,14 @@ footer {
 }
 
 .left-section {
-    min-height: 120px;
-}
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
 
-.logo {
-    margin-bottom: 0;
+    img {
+        width: 150px;
+        height: auto;
+    }
 }
 
 .socialmedia-btns {
