--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -3,7 +3,10 @@
         <img class="shape" src="assets/img/atf-shape.png" alt="Shape">
         <div class="atf-undersection">
             <div class="atf-content">
-                <img class="profile-img" src="assets/img/piri.png" alt="Piri">
+                <div class="photo-div">
+                    <img src="assets/img/shadows/photo-bgr.svg" alt="Shadow" class="shadow">
+                    <img class="profile-img" src="assets/img/piri.png" alt="Piri">
+                </div>
                 <div class="right-section">
                     <div class="title-div">
                         <span>
