--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-above-the-fold></app-above-the-fold>
+<app-shadow></app-shadow>
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
 <app-portfolio></app-portfolio>
