--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -8,6 +8,7 @@ section {
     justify-content: center;
     // border-top: 4px solid var(--light-blue);
     border: 1px solid yellow;
+    background-color: var(--dark-blue);
 }
 
 footer {
