--- a/src/app/shadow/shadow.component.scss
+++ b/src/app/shadow/shadow.component.scss
@@ -5,7 +5,6 @@
     left: 0;
     height: 100%;
     width: 100%;
-    border: 10px solid pink;
     display: flex;
     justify-content: center;
     z-index: -1;
@@ -15,7 +14,7 @@
     width: 100%;
     max-width: 1440px;
     height: 100%;
-    border: 10px solid green;
+    overflow-x: clip;
 }
 
 .shadow-1 {
