added scroll margin

--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -17,7 +17,9 @@
                             projects.</p>
                     </div>
                     <div class="button-div">
-                        <button class="button">Get in touch</button>
+                        <a href="#contact">
+                            <button class="button">Get in touch</button>
+                        </a>
                     </div>
                 </div>
             </div>
