--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -23,9 +23,9 @@
                     <div class="contact-section">
                         <div class="border"></div>
                         <div class="socialmedia-btns">
-                            <img src="assets/img/github-btn.svg" alt="Github">
-                            <img src="assets/img/mail-btn.svg" alt="E-Mail">
-                            <img src="assets/img/linkedin-btn.svg" alt="Linkedin">
+                            <a href="https://github.com"><img src="assets/img/github-btn.svg" alt="Github"></a>
+                            <a href="#contact"><img src="assets/img/mail-btn.svg" alt="E-Mail"></a>
+                            <a href="https://linkedin.com"><img src="assets/img/linkedin-btn.svg" alt="Linkedin"></a>
                         </div>
                         <a href="#contact">hello&#64;pirathib-mahalingam.com</a>
                     </div>
