added imprint and edited position of footer

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,8 +1,8 @@
-<section>
+<div class="footer" id="footer">
     <footer>
         <div class="left-section">
-            <img src="assets/img/logo.png" alt="Logo">
-            <a href="" class="imprint">Impressum</a>
+            <a href="#atf"><img src="assets/img/logo.png" alt="Logo"></a>
+            <a href="/imprint" class="imprint">Legal Notice</a>
         </div>
         <span class="copyright-div">&copy; Pirathib Mahalingam 2024</span>
         <div class="socialmedia-btns">
@@ -11,4 +11,4 @@
             <a href="https://linkedin.com" target="_blank"><img src="assets/img/linkedin-btn.svg" alt="Linkedin"></a>
         </div>
     </footer>
-</section>
+</div>
