--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,6 +48,21 @@
     background-repeat: no-repeat;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    background-color: var(--dark-blue) !important;
+    -webkit-box-shadow: 0 0 0px 1000px var(--dark-blue) inset !important;
+    color: var(--white) !important;
+    -webkit-text-fill-color: var(--white) !important;
+}
+
 html {
     scroll-behavior: smooth;
 }
