--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,7 @@
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
+input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 textarea:-webkit-autofill,
 textarea:-webkit-autofill:hover,
@@ -82,6 +82,37 @@ h2 {
     line-height: 108px;
     font-weight: 700;
     margin: 0;
+}
+
+h3 {
+    font-size: 56px;
+    line-height: 58px;
+}
+
+h4 {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38.4px;
+    color: var(--purple);
+}
+
+h5 {
+    font-size: 38px;
+    line-height: 38.4px;
+    font-weight: 700;
+}
+
+h6 {
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 27.6px;
+    color: var(--light-blue);
+}
+
+p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19.2px;
 }
 
 a {
