edited myskills get in touch section

--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -128,7 +128,7 @@
 
 .border {
     width: 100px;
-    border: 4px solid var(--purple);
+    border-bottom: 4px solid var(--purple);
 }
 
 .socialmedia-btns {
