--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -60,12 +60,13 @@
 }
 
 .title-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: center;
     position: relative;
     right: 50px;
+    top: 80px;
 }
 
 .title-header {
@@ -117,6 +118,7 @@
     transition: 125ms ease-out;
 
     &:hover {
+        transform: translateY(5px);
         padding: 20px 40px;
         background-color: var(--purple);
     }
@@ -124,8 +126,8 @@
 
 .border {
     position: relative;
-    top: 50px;
-    left: 305px;
+    top: 56px;
+    left: 563px;
     width: 58px;
     border-top: 4px solid var(--purple);
 }
