edited back home + error (router)

--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,5 +1,7 @@
 <div class="imprint">
     <div class="imprint-content">
+        <a href="/"><img (mouseenter)="hover = true;" (mouseleave)="hover = false;"
+            [src]="hover ? '../../assets/img/arrow-blue.svg' : '../../assets/img/arrow-default.svg'" alt="Back Home" class="arrow"></a>
         <h3>Legal Notice</h3>
 
         <p class="address">Pirathib Mahalingam<br />
