--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,6 +1,8 @@
 <app-shadow></app-shadow>
 <div class="privacy-policy">
     <div class="privacy-policy-content">
+        <a href="/#contact"><img (mouseenter)="hover = true;" (mouseleave)="hover = false;"
+            [src]="hover ? '../../assets/img/arrow-blue.svg' : '../../assets/img/arrow-default.svg'" alt="Back Home" class="arrow"></a>
         <h3>Privacy Policy</h3>
         <p>Last updated: June 12, 2024</p>
         <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your
