--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -11,7 +11,7 @@
     width: 100%;
     max-width: 1440px;
     height: 100%;
-    padding: 100px;
+    padding: 46px 100px 100px 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,4 +26,14 @@
         text-align-last: left;
         margin-bottom: 32px;
     }
+}
+
+.arrow {
+    width: 39px;
+    height: 39px;
+    position: relative;
+    top: 85px;
+    left: 1209px;
+    transform: rotate(270deg);
+    transition: 200ms ease-in-out;
 }
