--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -38,6 +38,7 @@ header {
         font-size: 23px;
         line-height: 27.6px;
         height: 32px;
+        transition: 200ms ease-in-out;
 
         &:hover {
             color: var(--light-blue);
