--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -68,6 +68,18 @@ p {
 .input-div {
     position: relative;
     width: -webkit-fill-available;
+
+    span {
+        font-size: 14px;
+        line-height: 16.8px;
+        color: var(--red);
+        margin-left: 4px;
+        margin-top: -18px;
+    }
+
+    .error-msg {
+        margin-top: 0;
+    }
 }
 
 form {
@@ -75,7 +87,8 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 32px;
+    gap: 8px;
+    // gap: 32px;
 
     input[type="text"], 
     textarea {
@@ -93,7 +106,7 @@ form {
         }
 
         &:hover {
-            border-color: var(--light-blue);
+            border-color: var(--blue-green);
             cursor: pointer;
         }
     }
@@ -118,12 +131,16 @@ input[type="submit"] {
     border-radius: 10px;
     padding: 15px 30px;
     box-shadow: 4px 4px 4px 0px solid rgba(0, 0, 0, 0.25);
-    gap: 10px;
+    // gap: 10px;
+    position: relative;
+    top: 16px;
 }
 
 .checkbox-div {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
     width: 617px;
     gap: 8px;
 
@@ -150,6 +167,16 @@ input[type="submit"] {
     }
 }
 
+.checkbox-content {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    
+    img {
+        margin-right: 6px;
+    }
+}
+
 .go-up {
     margin-top: 100px;
 }
@@ -162,4 +189,22 @@ input[type="submit"] {
     left: 668px;
     transition: 200ms ease-in-out;
     margin-top: 100px;
+}
+
+.input-field {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.warn-symbol {
+    width: 25px;
+    height: 25px;
+    position: relative;
+    left: 576px;
+    bottom: 37px;
+}
+
+.pos-bottom {
+    bottom: 185px;
 }
