--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,9 @@
     --light-blue: rgba(0, 190, 232, 1);
     --purple: rgba(75, 71, 255, 1);
     --white: rgba(255, 255, 255, 1);
+    --blue-green: rgba(28, 230, 182, 1);
+    --red: rgba(230, 28, 64, 1);
+    --green: rgba(112, 230, 28, 1);
 }
 
 * {
@@ -122,3 +125,7 @@ a {
     cursor: pointer;
     user-select: none;
 }
+
+.d-none {
+    display: none;
+} 
